# tool

./: 2024 p.txt  250630_module  app.py  ch  check_etag.py  genData.ipynb  gen_data.ipynb  pair_dist.ipynb  pair_dist.py  see_map.ipynb
0225_histParser/: chatParser.ipynb  data.json  write_json.ipynb
0306_check_data/: check_data.ipynb  data.csv
0311_multiproces_log/: build.py
0316_ftp/: ftp_client.py  ftp_ctrl.ipynb
0316_get_local_time/: get_local_time.py
0316_minio/: mino_client.py
240623_mem_dist/: exp.csv  exp.xlsx  pair_dist.py  plot_exp.xlsx
250625_useful/: minio_op.py
250627_test_etag_time/: bin.csv  csv.csv  etag.py  gen_test_file.py  test_time.py  txt.csv
260327_excel_color/: color.py
BatchDfGenerator/: BatchDfGen.ipynb
Inference_framwork/: main.py  main_daemon.py
NV/: train.ipynb  train_IMN.ipynb
Valuation/: Validation.ipynb  gen_data.py  my_logger.py  testing_data.csv  training_data.csv
ana_hub/: azure-pipelines.yml  pyproject.toml
ana_hub/libs/v1/my_toolkit/src/my_toolkit/: core.py  main.py  utils.py
ana_hub/libs/v2/my_toolkit/src/my_toolkit/: core.py  utils.py
ana_hub/src/ana_hub/: app.py
ana_hub/src/my_module/: runner.py  worker.py
ana_hub/tests/: test_app.py
column_split/: column_split.ipynb  data1.csv  data2.csv  data3.csv
column_split2/: column_split2.ipynb
compare_dist/: pair_dist.py
data_class/: dict2dc.py
defense/: data.csv  defense.ipynb
divide_groups/: divide_group.ipynb
exclude_dog_part/: exclude_part.ipynb
extract_value_from_series/: extract_value.ipynb
ftp/: create_table.ipynb  mylogger.py  (+1 more)
(+81 files in other folders)
