[project]
name = "ana-hub"
version = "0.1.0"
description = ""
authors = [{ name = "33chlee1205", email = "33chlee1205@google.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (>=4.0.0,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
]

[tool.poetry]
packages = [{ include = "ana_hub", from = "src" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)"]
